<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/importTable"
        app:showAsAction="never"
        android:title="@string/import_data"/>
    <item android:id="@+id/accessTable"
        android:title="@string/access_other_table"
        app:showAsAction="never"/>
    <item android:id="@+id/shareButton"
        android:title="@string/share_table"
        android:icon="@drawable/ic_baseline_share_24"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/resetMenuButton"
        android:title="@string/reset"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_signout"
        android:title="@string/signout"
        app:showAsAction="never" />
<!--    <item-->
<!--        android:id="@+id/showToken"-->
<!--        android:title="@string/send_token"-->
<!--        app:showAsAction="never"/>-->
</menu>