<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".Activity.LoginActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            app:hintTextAppearance="@style/counterText"
            app:errorTextAppearance="@style/counterOverride"
            android:layout_marginVertical="5dp"
            android:id="@+id/loginEmailWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/login_email"
                android:inputType="textEmailAddress"
                android:hint="@string/enter_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:hintTextAppearance="@style/counterText"
            app:errorTextAppearance="@style/counterOverride"
            android:layout_marginVertical="5dp"
            app:passwordToggleEnabled="true"
            android:id="@+id/loginPasswordWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/login_password"
                android:inputType="textPassword"
                android:hint="@string/enter_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:textColor="@color/colorAccent"
            android:layout_gravity="end"
            android:id="@+id/login_forgotPassword"
            android:text="@string/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="28dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:textSize="15sp"
            android:textColor="@color/colorAccent"
            android:backgroundTint="@color/colorButton"
            android:text="@string/login"
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:id="@+id/or_text"
            android:text="@string/orText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_marginTop="15dp"
            android:textColor="@color/colorAccent"
            android:backgroundTint="@color/colorButton"
            android:text="@string/create"
            android:id="@+id/create_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loginProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:visibility="invisible" />


</LinearLayout>