<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ImportDataActivity">

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbarImport"
        layout="@layout/toolbar" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_below="@+id/toolbarImport"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_marginHorizontal="7dp"
            android:layout_marginVertical="3dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_marginStart="3dp"
                android:layout_marginEnd="4dp"
                android:hint="@string/enterAccessCode"
                android:id="@+id/import_classId"
                android:layout_weight="6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <Button
                android:text="@string/go"
                android:id="@+id/importButton"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_centerInParent="true"
                android:id="@+id/import_noText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nothing" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/import_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="0dp" />
        </RelativeLayout>
    </LinearLayout>


</RelativeLayout>