<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/toolbarDelete"
        layout="@layout/toolbar"/>
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".Activity.LoginActivity">
        <ImageView
            android:background="@drawable/profile_border_background"
            android:id="@+id/deleteProfilePhoto"
            android:layout_width="168dp"
            android:layout_height="185dp"
            android:layout_marginVertical="12dp"
            android:src="@drawable/ic_baseline_person_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:layout_marginBottom="8dp"
                android:textSize="18sp"
                android:gravity="center"
                android:id="@+id/delete_email"
                android:hint="@string/enter_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            app:hintTextAppearance="@style/counterText"
            app:errorTextAppearance="@style/counterOverride"
            android:layout_marginVertical="5dp"
            app:passwordToggleEnabled="true"
            android:id="@+id/deletePasswordWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/delete_password"
                android:inputType="textPassword"
                android:hint="@string/enter_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_marginTop="28dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:textSize="15sp"
                android:textColor="@color/colorAccent"
                android:backgroundTint="@color/colorButton"
                android:text="@string/deleteAccount"
                android:id="@+id/delete_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <ProgressBar
            android:visibility="invisible"
            android:id="@+id/deleteProgressBar"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>
